--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -110,4 +110,9 @@
   </div>
 </div>
 
+<%= link_to(new_item_path, data: { turbo: false }, class: 'purchase-btn') do %>
+  <span class='purchase-btn-text'>出品する</span>
+  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+<% end %>
+
 <%= render "shared/footer"%>
