--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,7 +133,7 @@
         <%# 商品の一覧を表示 %>
         <% @items.each do |item| %>
           <li class="list">
-            <%= link_to '#' do %>
+            <%= link_to item_path(item) do %>
               <div class="item-img-content">
                 <%= image_tag item.image, class: 'item-img' %>
               </div>
