--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -136,6 +136,14 @@
             <%= link_to item_path(item) do %>
               <div class="item-img-content">
                 <%= image_tag item.image, class: 'item-img' %>
+                <% history = History.find_by(item_id: item.id) %>
+                <% if history.present? %>
+                  <% if item.id == History.find(item.id).item_id%>
+                    <div class="sold-out">
+                      <span>Sold Out!!</span>
+                    </div>
+                  <% end %>
+                <% end %>
               </div>
               <div class="item-info">
                 <h3 class="item-name">
