--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,14 +9,13 @@
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
 
-      <%# 以下、商品購入機能実装時までコメントアウト %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <!--<div class="sold-out">
-        <span>Sold Out!!</span>
-      </div>
-      -->
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
-      <%# 以上、商品購入機能実装時までコメントアウト %>
+      <% if @history.present? %>
+        <% if @item.id == @history.item_id %>
+          <div class="sold-out">
+            <span>Sold Out!!</span>
+          </div>
+        <% end %>
+      <% end %>
 
     </div>
     <div class="item-price-box">
@@ -28,13 +27,15 @@
       </span>
     </div>
 
-    <% if user_signed_in? && current_user.id == @item.user_id %>
-      <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
-      <p class="or-text">or</p>
-      <%= link_to "削除", item_path(@item.id),data: { turbo_method: :delete }, class:"item-destroy" %>
+    <% if @history.blank? %>
+      <% if user_signed_in? && current_user.id == @item.user_id %>
+        <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
+        <p class="or-text">or</p>
+        <%= link_to "削除", item_path(@item.id),data: { turbo_method: :delete }, class:"item-destroy" %>
 
-    <% elsif user_signed_in? && current_user.id != @item.user_id %>
-      <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+      <% elsif user_signed_in? && current_user.id != @item.user_id %>
+        <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
+      <% end %>
     <% end %>
 
     <div class="item-explain-box">
